# music_transcription

./: .gitignore  CMakeLists.txt  readme.txt
include/: KeyPressDetector.h  filehandle_vov.h  my_contours_utility.h  my_utility.h
src/: KeyPressDetector.cpp  filehandle_vov.cpp  find_pressed_keys.cpp  frame_picker.cpp  key_detection.cpp  key_press_detector.cpp  keyboard_edge.cpp  my_contours_utility.cpp  perspective_transform.cpp
